Add test platform helpers and refactor GenevaExporter tests.

--- a/test/OpenTelemetry.Exporter.Geneva.Tests/OpenTelemetry.Exporter.Geneva.Tests.csproj
+++ b/test/OpenTelemetry.Exporter.Geneva.Tests/OpenTelemetry.Exporter.Geneva.Tests.csproj
@@ -33,6 +33,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="$(RepoRoot)\test\Shared\PlatformHelpers.cs" Link="Includes\PlatformHelpers.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Protobuf Include="**/*.proto" Access="internal">
       <ProtoRoot>Proto</ProtoRoot>
     </Protobuf>
